Fixed Changes and Errors

--- a/index.html
+++ b/index.html
@@ -2,19 +2,62 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Professional Business Website</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Selling with Sean | Real Estate Agent in Eldersburg, MD & Howard County</title>
+  <meta name="description"
+    content="Trusted Realtor Sean Bodnar specializing in buying and selling homes in Eldersburg, Sykesville, and Howard County, MD. Call (410) 940-3032 for a free market analysis." />
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="Selling with Sean | Real Estate Agent in Eldersburg, MD" />
+  <meta property="og:description"
+    content="Trusted Realtor Sean Bodnar specializing in buying and selling homes in Eldersburg, Sykesville, and Howard County, MD." />
+  <meta property="og:image"
+    content="https://img1.wsimg.com/isteam/ip/daf89318-8ad7-4a11-8f4a-b5842fa45c45/401845630_311528424972365_6482679109257298931_.jpg" />
+  <meta property="og:url" content="https://sellingwithsean.com" />
+  <meta property="og:type" content="website" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "RealEstateAgent",
+      "name": "Sean Bodnar - Keller Williams Lucido Agency",
+      "image": "https://img1.wsimg.com/isteam/ip/daf89318-8ad7-4a11-8f4a-b5842fa45c45/401845630_311528424972365_6482679109257298931_.jpg",
+      "telephone": "+14109403032",
+      "url": "https://sellingwithsean.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "6229 Sykesville Rd",
+        "addressLocality": "Eldersburg",
+        "addressRegion": "MD",
+        "postalCode": "21784",
+        "addressCountry": "US"
+      },
+      "areaServed": [
+        "Eldersburg",
+        "Sykesville",
+        "Gamber",
+        "Henryton",
+        "Woodbine",
+        "New Market",
+        "Clarksville",
+        "Ellicott City",
+        "Carrolltowne",
+        "Marriottsville"
+      ],
+      "postalCodeRange": "21784, 21048, 21104, 21797, 21774, 21029, 21042",
+      "priceRange": "$$$"
+    }
+    </script>
 </head>
 
 <body class="fs-unmask-airo-app-builder">
-    <div id="app" class="fs-unmask-airo-app-builder"></div>
-    <script type="module">
+  <div id="app" class="fs-unmask-airo-app-builder"></div>
+  <script type="module">
 
-        import('/src/main.tsx')
-    </script>
-    <script src="/analytics.js"></script>
+    import('/src/main.tsx')
+  </script>
+  <script src="/analytics.js"></script>
 </body>
 
 </html>
