--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png"
+    href="https://img1.wsimg.com/isteam/ip/daf89318-8ad7-4a11-8f4a-b5842fa45c45/images%20(2).png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Selling with Sean | Real Estate Agent in Eldersburg, MD & Howard County</title>
   <meta name="description"
