--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Selling with Sean | Real Estate Agent in Eldersburg, MD & Howard County</title>
   <meta name="description"
-    content="Trusted Realtor Sean Bodnar specializing in buying and selling homes in Eldersburg, Sykesville, and Howard County, MD. Call (410) 940-3032 for a free market analysis." />
+    content="Sean Bodnar, trusted Realtor in Eldersburg, Sykesville & Howard County, MD. Buying or selling? Call (410) 940-3032 for a free market analysis." />
+  <link rel="canonical" href="https://www.sellingwithsean.com" />
+  <meta name="robots" content="index, follow" />
+  <meta name="publisher" content="Sean Bodnar" />
+  <meta name="author" content="Sean Bodnar" />
+  <meta name="keywords"
+    content="Real Estate, Realtor, Eldersburg, Sykesville, Howard County, Sean Bodnar, Buy Home, Sell Home" />
 
   <!-- Open Graph Tags -->
   <meta property="og:title" content="Selling with Sean | Real Estate Agent in Eldersburg, MD" />
