--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Selling with Sean | Real Estate Agent in Eldersburg, MD & Howard County</title>
   <meta name="description"
-    content="Sean Bodnar, trusted Realtor in Eldersburg, Sykesville & Howard County, MD. Buying or selling? Call (410) 940-3032 for a free market analysis." />
+    content="Sean Bodnar - Keller Williams Lucido Agency. Trusted Realtor in Eldersburg, Sykesville & Howard County, MD. Call (410) 940-3032 for a free market analysis." />
   <link rel="canonical" href="https://www.sellingwithsean.com" />
   <meta name="robots" content="index, follow" />
   <meta name="publisher" content="Sean Bodnar" />
@@ -20,7 +20,7 @@
   <!-- Open Graph Tags -->
   <meta property="og:title" content="Selling with Sean | Real Estate Agent in Eldersburg, MD" />
   <meta property="og:description"
-    content="Trusted Realtor Sean Bodnar specializing in buying and selling homes in Eldersburg, Sykesville, and Howard County, MD." />
+    content="Sean Bodnar - Keller Williams Lucido Agency. Trusted Realtor in Eldersburg, Sykesville & Howard County, MD. Call (410) 940-3032 for a free market analysis." />
   <meta property="og:image"
     content="https://img1.wsimg.com/isteam/ip/daf89318-8ad7-4a11-8f4a-b5842fa45c45/401845630_311528424972365_6482679109257298931_.jpg" />
   <meta property="og:url" content="https://sellingwithsean.com" />
