--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     content="Sean Bodnar - Keller Williams Lucido Agency. Trusted Realtor in Eldersburg, Sykesville & Howard County, MD. Call (410) 940-3032 for a free market analysis." />
   <meta property="og:image"
     content="https://img1.wsimg.com/isteam/ip/daf89318-8ad7-4a11-8f4a-b5842fa45c45/401845630_311528424972365_6482679109257298931_.jpg" />
-  <meta property="og:url" content="https://sellingwithsean.com" />
+  <meta property="og:url" content="https://www.sellingwithsean.com" />
   <meta property="og:type" content="website" />
   <script type="application/ld+json">
     {
@@ -32,7 +32,7 @@
       "name": "Sean Bodnar - Keller Williams Lucido Agency",
       "image": "https://img1.wsimg.com/isteam/ip/daf89318-8ad7-4a11-8f4a-b5842fa45c45/401845630_311528424972365_6482679109257298931_.jpg",
       "telephone": "+14109403032",
-      "url": "https://sellingwithsean.com",
+      "url": "https://www.sellingwithsean.com",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "6229 Sykesville Rd",
@@ -53,7 +53,6 @@
         "Carrolltowne",
         "Marriottsville"
       ],
-      "postalCodeRange": "21784, 21048, 21104, 21797, 21774, 21029, 21042",
       "priceRange": "$$$"
     }
     </script>
