--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <link rel="shortcut icon" href="/favicon.png" />
-  <link rel="apple-touch-icon" href="/favicon.png" />
+  <link rel="icon" href="/Favicon/favicon.ico" />
+  <link rel="shortcut icon" href="/Favicon/favicon.ico" />
+  <link rel="apple-touch-icon" href="/Favicon/apple-touch-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Selling with Sean | Real Estate Agent in Eldersburg, MD & Howard County</title>
   <meta name="description"
@@ -21,8 +21,7 @@
   <meta property="og:title" content="Selling with Sean | Real Estate Agent in Eldersburg, MD" />
   <meta property="og:description"
     content="Sean Bodnar - Keller Williams Lucido Agency. Trusted Realtor in Eldersburg, Sykesville & Howard County, MD. Call (410) 940-3032 for a free market analysis." />
-  <meta property="og:image"
-    content="https://img1.wsimg.com/isteam/ip/daf89318-8ad7-4a11-8f4a-b5842fa45c45/401845630_311528424972365_6482679109257298931_.jpg" />
+  <meta property="og:image" content="https://www.sellingwithsean.com/Favicon/android-chrome-512x512.png" />
   <meta property="og:url" content="https://www.sellingwithsean.com" />
   <meta property="og:type" content="website" />
 
