--- a/index.html
+++ b/index.html
@@ -7,23 +7,29 @@
   <link rel="shortcut icon" href="/Favicon/favicon.ico" />
   <link rel="apple-touch-icon" href="/Favicon/apple-touch-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Selling with Sean | Real Estate Agent in Eldersburg, MD & Howard County</title>
+  <title>Realtor in Eldersburg & Carroll County, MD | Sean Bodnar</title>
   <meta name="description"
-    content="Sean Bodnar - Keller Williams Lucido Agency. Trusted Realtor in Eldersburg, Sykesville & Howard County, MD. Call (410) 940-3032 for a free market analysis." />
+    content="Sean Bodnar - Keller Williams Lucido Agency. Trusted Realtor in Eldersburg, Sykesville, Carroll County & Howard County, MD. Buy or Sell your home today." />
   <link rel="canonical" href="https://www.sellingwithsean.com" />
   <meta name="robots" content="index, follow" />
   <meta name="publisher" content="Sean Bodnar" />
   <meta name="author" content="Sean Bodnar" />
   <meta name="keywords"
-    content="Real Estate, Realtor, Eldersburg, Sykesville, Howard County, Sean Bodnar, Buy Home, Sell Home" />
+    content="Real Estate, Realtor, Eldersburg, Sykesville, Howard County, Carroll County, Sean Bodnar, Buy Home, Sell Home" />
 
   <!-- Open Graph Tags -->
-  <meta property="og:title" content="Selling with Sean | Real Estate Agent in Eldersburg, MD" />
+  <meta property="og:title" content="Realtor in Eldersburg & Carroll County, MD | Sean Bodnar" />
   <meta property="og:description"
-    content="Sean Bodnar - Keller Williams Lucido Agency. Trusted Realtor in Eldersburg, Sykesville & Howard County, MD. Call (410) 940-3032 for a free market analysis." />
-  <meta property="og:image" content="https://www.sellingwithsean.com/Favicon/android-chrome-512x512.png" />
+    content="Sean Bodnar - Keller Williams Lucido Agency. Trusted Realtor in Eldersburg, Sykesville, Carroll County & Howard County, MD. Buy or Sell your home today." />
+  <meta property="og:image" content="https://www.sellingwithsean.com/assets/photos/Eldersburg.jpg" />
   <meta property="og:url" content="https://www.sellingwithsean.com" />
   <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Realtor in Eldersburg & Carroll County, MD | Sean Bodnar" />
+  <meta name="twitter:description" content="Sean Bodnar - Keller Williams Lucido Agency. Trusted Realtor in Eldersburg, Sykesville, Carroll County & Howard County, MD. Buy or Sell your home today." />
+  <meta name="twitter:image" content="https://www.sellingwithsean.com/assets/photos/Eldersburg.jpg" />
 
 </head>
 
